update sdk-dapp-sc-explorer z-indexes in order to avoid interferences with sdk-dapp-ui

--- a/src/assets/sass/plugins/sdk-sc-explorer/_tooltip.scss
+++ b/src/assets/sass/plugins/sdk-sc-explorer/_tooltip.scss
@@ -14,7 +14,7 @@
 }
 
 .#{$package-name}-tooltip {
-  --tooltip-zindex: 1080;
+  --tooltip-zindex: 18;
   --tooltip-max-width: 30rem;
   --tooltip-padding-x: 0.5rem;
   --tooltip-padding-y: 0.5rem;
